build_output_fixed.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:processDebugGoogleServices UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :app:compileDebugJavaWithJavac UP-TO-DATE
> Task :app:bundleDebugClassesToCompileJar UP-TO-DATE
> Task :app:preDebugAndroidTestBuild SKIPPED
> Task :app:javaPreCompileDebugAndroidTest UP-TO-DATE
> Task :app:checkDebugAndroidTestAarMetadata UP-TO-DATE
> Task :app:processDebugAndroidTestNavigationResources UP-TO-DATE
> Task :app:compileDebugAndroidTestNavigationResources UP-TO-DATE
> Task :app:generateDebugAndroidTestResValues UP-TO-DATE
> Task :app:mapDebugAndroidTestSourceSetPaths UP-TO-DATE
> Task :app:generateDebugAndroidTestResources UP-TO-DATE
> Task :app:mergeDebugAndroidTestResources UP-TO-DATE
> Task :app:processDebugAndroidTestManifest UP-TO-DATE
> Task :app:processDebugAndroidTestResources UP-TO-DATE

> Task :app:compileDebugAndroidTestJavaWithJavac FAILED
.\gradlew.bat : C:\Users\f
ahad\AndroidStudioProjects
\kebabs-wrap\app\src\andro
idTest\java\com\example\ev
entmanager\HomeScreenUITes
t.java:26: error: cannot 
find symbol
At line:1 char:65
+ ... tudio\jbr"; 
.\gradlew.bat 
assembleAndroidTest > 
build_output2.txt 2>& ...
+                 ~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo        
      : NotSpecified: (C  
  :\Users\fahad\...not    
 find symbol:String) [    
], RemoteException
    + FullyQualifiedError 
   Id : NativeCommandErr  
  or
 
    @Test public void home
_entrantChipDisplayed() { 
onView(withId(R.id.chip_en
trant)).check(matches(isDi
splayed())); }
                          
                          
                  ^
  symbol:   variable 
chip_entrant
  location: class id
C:\Users\fahad\AndroidStud
ioProjects\kebabs-wrap\app
\src\androidTest\java\com\
example\eventmanager\HomeS
creenUITest.java:27: 
error: cannot find symbol
    @Test public void home
_organizerChipDisplayed() 
{ onView(withId(R.id.chip_
organizer)).check(matches(
isDisplayed())); }
                          
                          
                    ^
  symbol:   variable 
chip_organizer
  location: class id
C:\Users\fahad\AndroidStud
ioProjects\kebabs-wrap\app
\src\androidTest\java\com\
example\eventmanager\HomeS
creenUITest.java:28: 
error: cannot find symbol
    @Test public void 
home_adminChipDisplayed() 
{ onView(withId(R.id.chip_
admin)).check(matches(isDi
splayed())); }
                          
                          
                ^
  symbol:   variable 
chip_admin
  location: class id
C:\Users\fahad\AndroidStud
ioProjects\kebabs-wrap\app
\src\androidTest\java\com\
example\eventmanager\HomeS
creenUITest.java:35: 
error: cannot find symbol
    @Test public void 
home_adminChipNavigates() 
{ onView(withId(R.id.chip_
admin)).perform(click()); 
onView(withId(R.id.card_ev
ents)).check(matches(isDis
played())); }
                          
                          
                ^
  symbol:   variable 
chip_admin
  location: class id
C:\Users\fahad\AndroidStud
ioProjects\kebabs-wrap\app
\src\androidTest\java\com\
example\eventmanager\HomeS
creenUITest.java:36: 
error: cannot find symbol
    @Test public void home
_organizerChipNavigates() 
{ onView(withId(R.id.chip_
organizer)).perform(click(
)); onView(withId(R.id.rec
ycler_my_events)).check(ma
tches(isDisplayed())); }
                          
                          
                    ^
  symbol:   variable 
chip_organizer
  location: class id
5 errors

[Incubating] Problems report is available at: file:///C:/Users/fahad/AndroidStudioProjects/kebabs-wrap/build/reports/problems/problems-report.html

FAILURE: Build failed 
with an exception.

* What went wrong:
Execution failed for task 
':app:compileDebugAndroidT
estJavaWithJavac'.
> Compilation failed; see 
the compiler output below.
  C:\Users\fahad\AndroidSt
udioProjects\kebabs-wrap\a
pp\src\androidTest\java\co
m\example\eventmanager\Hom
eScreenUITest.java:26: 
error: cannot find symbol
      @Test public void ho
me_entrantChipDisplayed() 
{ onView(withId(R.id.chip_
entrant)).check(matches(is
Displayed())); }
                          
                          
                    ^
    symbol:   variable 
chip_entrant
    location: class id
  C:\Users\fahad\AndroidSt
udioProjects\kebabs-wrap\a
pp\src\androidTest\java\co
m\example\eventmanager\Hom
eScreenUITest.java:27: 
error: cannot find symbol
      @Test public void ho
me_organizerChipDisplayed(
) { onView(withId(R.id.chi
p_organizer)).check(matche
s(isDisplayed())); }
                          
                          
                      ^
    symbol:   variable 
chip_organizer
    location: class id
  C:\Users\fahad\AndroidSt
udioProjects\kebabs-wrap\a
pp\src\androidTest\java\co
m\example\eventmanager\Hom
eScreenUITest.java:28: 
error: cannot find symbol
      @Test public void 
home_adminChipDisplayed() 
{ onView(withId(R.id.chip_
admin)).check(matches(isDi
splayed())); }
                          
                          
                  ^
    symbol:   variable 
chip_admin
    location: class id
  C:\Users\fahad\AndroidSt
udioProjects\kebabs-wrap\a
pp\src\androidTest\java\co
m\example\eventmanager\Hom
eScreenUITest.java:35: 
error: cannot find symbol
      @Test public void 
home_adminChipNavigates() 
{ onView(withId(R.id.chip_
admin)).perform(click()); 
onView(withId(R.id.card_ev
ents)).check(matches(isDis
played())); }
                          
                          
                  ^
    symbol:   variable 
chip_admin
    location: class id
  C:\Users\fahad\AndroidSt
udioProjects\kebabs-wrap\a
pp\src\androidTest\java\co
m\example\eventmanager\Hom
eScreenUITest.java:36: 
error: cannot find symbol
      @Test public void ho
me_organizerChipNavigates(
) { onView(withId(R.id.chi
p_organizer)).perform(clic
k()); onView(withId(R.id.r
ecycler_my_events)).check(
matches(isDisplayed())); }
                          
                          
                      ^
    symbol:   variable 
chip_organizer
    location: class id
  5 errors

* Try:
> Check your code and 
dependencies to fix the 
compilation error(s)
> Run with --scan to 
generate a Build Scan 
(powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.2.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 1s
30 actionable tasks: 1 executed, 29 up-to-date
